@@ -185,7 +185,7 @@ $(function () {
          chart: {
             backgroundColor: '#F7F7F9',
             renderTo: 'container',
-            zoomType: 'x',
+            zoomType: 'xy',
             spacingRight: 20,
             events: {
                load: function() {
