@@ -1,4 +1,16 @@
 CultiBox (1.0.335) precise; urgency=low
+   + Possibilité de zoomer sur les deux axes dans les logs
+        02_srcjoomla/main/templates/logs.html
+
+   + Personnalisation des boutons "ajouter/suppprimer prise"
+        02_srcjoomla/main/libs/css/cultibox.css
+        02_srcjoomla/main/templates/programs.html
+        02_srcjoomla/main/locale/en_GB.utf8.po
+        02_srcjoomla/main/locale/fr_FR.utf8.po
+
+
+   + Correction de bugs sur la gestion des fichiers pwr_XX: on ne charge que les valeurs différentes de 0 pour gagner en temps de requette et on supprime les caractères spéciaux qui peuvent trainer
+        02_srcjoomla/main/libs/utilfunc.php
 
    + Ajout de l'information de régulation secondaire dans les programmes
         02_src/joomla/main/libs/db_common.php
